@@ -419,7 +419,7 @@ public class DataManager {
     public void indexMetadata(Dbms dbms, String id) throws Exception {
         try {
             Vector<Element> moreFields = new Vector<Element>();
-            int id$ = new Integer(id);
+            int id$ = Integer.valueOf(id);
 
             // get metadata, extracting and indexing any xlinks
             Element md   = xmlSerializer.selectNoXLinkResolver(dbms, "Metadata", id, true);
@@ -484,7 +484,7 @@ public class DataManager {
             if (owner != null) {
                 String userQuery = "SELECT username, surname, name, profile FROM Users WHERE id = ?";
 
-                Element user = dbms.select(userQuery,  new Integer(owner)).getChild("record");
+                Element user = dbms.select(userQuery,  Integer.valueOf(owner)).getChild("record");
 
                 if (user != null) {
                     moreFields.add(SearchManager.makeField("_userinfo",
@@ -731,7 +731,7 @@ public class DataManager {
      * @throws Exception
      */
     public String getMetadataSchema(Dbms dbms, String id) throws Exception {
-        List list = dbms.select("SELECT schemaId FROM Metadata WHERE id = ?", new Integer(id)).getChildren();
+        List list = dbms.select("SELECT schemaId FROM Metadata WHERE id = ?", Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             throw new IllegalArgumentException("Metadata not found for id : " +id);
@@ -1119,7 +1119,7 @@ public class DataManager {
     public String getMetadataUuid(Dbms dbms, String id) throws Exception {
         String query = "SELECT uuid FROM Metadata WHERE id=?";
 
-        List list = dbms.select(query, new Integer(id)).getChildren();
+        List list = dbms.select(query, Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             return null;
@@ -1139,7 +1139,7 @@ public class DataManager {
     public String getMetadataTemplate(Dbms dbms, String id) throws Exception {
         String query = "SELECT istemplate FROM Metadata WHERE id=?";
 
-        List list = dbms.select(query, new Integer(id)).getChildren();
+        List list = dbms.select(query, Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             return null;
@@ -1162,7 +1162,7 @@ public class DataManager {
                 "FROM   Metadata "+
                 "WHERE id=?";
 
-        List list = dbms.select(query, new Integer(id)).getChildren();
+        List list = dbms.select(query, Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             return null;
@@ -1350,7 +1350,7 @@ public class DataManager {
      */
     public void updateDisplayOrder(Dbms dbms, String id, String displayOrder) throws Exception {
         String query = "UPDATE Metadata SET displayOrder = ? WHERE id = ?";
-        dbms.execute(query, new Integer(displayOrder), new  Integer(id));
+        dbms.execute(query, Integer.valueOf(displayOrder), new  Integer(id));
     }
 
     /**
@@ -1442,7 +1442,7 @@ public class DataManager {
     public String createMetadata(ServiceContext context, Dbms dbms, String templateId, String groupOwner,
                                  SerialFactory sf, String source, int owner,
                                  String parentUuid, String isTemplate, boolean fullRightsForGroup) throws Exception {
-        int iTemplateId = new Integer(templateId);
+        int iTemplateId = Integer.valueOf(templateId);
         String query = "SELECT schemaId, data FROM Metadata WHERE id=?";
         List listTempl = dbms.select(query, iTemplateId).getChildren();
 
@@ -1651,7 +1651,7 @@ public class DataManager {
      */
     public boolean existsMetadata(Dbms dbms, int id) throws Exception {
         //FIXME : should use lucene
-        List list = dbms.select("SELECT id FROM Metadata WHERE id=?", new Integer(id)).getChildren();
+        List list = dbms.select("SELECT id FROM Metadata WHERE id=?", Integer.valueOf(id)).getChildren();
         return list.size() != 0;
     }
 
@@ -1701,7 +1701,7 @@ public class DataManager {
      * @throws Exception
      */
     public synchronized void updateMetadataOwner(Dbms dbms, int id, String owner, String groupOwner) throws Exception {
-        dbms.execute("UPDATE Metadata SET owner=?, groupOwner=? WHERE id=?", new Integer(owner), new Integer(groupOwner), id);
+        dbms.execute("UPDATE Metadata SET owner=?, groupOwner=? WHERE id=?", Integer.valueOf(owner), Integer.valueOf(groupOwner), id);
     }
 
     /**
@@ -1971,7 +1971,7 @@ public class DataManager {
         for (String type : i) {
             String query = "INSERT INTO Validation (metadataId, valType, status, tested, failed, valDate) VALUES (?,?,?,?,?,?)";
             Integer[] results = valTypeAndStatus.get(type);
-            dbms.execute(query, new Integer(id), type, results[0], results[1], results[2], date);
+            dbms.execute(query, Integer.valueOf(id), type, results[0], results[1], results[2], date);
         }
         dbms.commit();
     }
@@ -1983,7 +1983,7 @@ public class DataManager {
      * @param id   the metadata record internal identifier
      */
     private void clearValidationStatus (Dbms dbms, String id) throws Exception {
-        dbms.execute("DELETE FROM Validation WHERE metadataId=?", new Integer(id));
+        dbms.execute("DELETE FROM Validation WHERE metadataId=?", Integer.valueOf(id));
         dbms.commit();
     }
 
@@ -1995,7 +1995,7 @@ public class DataManager {
      * @return
      */
     private List<Element> getValidationStatus (Dbms dbms, String id) throws Exception {
-        return dbms.select("SELECT valType, status, tested, failed FROM Validation WHERE metadataId=?", new Integer(id)).getChildren();
+        return dbms.select("SELECT valType, status, tested, failed FROM Validation WHERE metadataId=?", Integer.valueOf(id)).getChildren();
     }
 
     //--------------------------------------------------------------------------
@@ -2022,10 +2022,10 @@ public class DataManager {
         //--- remove categories
         deleteAllMetadataCateg(dbms, id);
 
-        dbms.execute("DELETE FROM MetadataRating WHERE metadataId=?", new Integer(id));
-        dbms.execute("DELETE FROM Validation WHERE metadataId=?", new Integer(id));
+        dbms.execute("DELETE FROM MetadataRating WHERE metadataId=?", Integer.valueOf(id));
+        dbms.execute("DELETE FROM Validation WHERE metadataId=?", Integer.valueOf(id));
 
-        dbms.execute("DELETE FROM MetadataStatus WHERE metadataId=?", new Integer(id));
+        dbms.execute("DELETE FROM MetadataStatus WHERE metadataId=?", Integer.valueOf(id));
 
         //--- remove metadata
         xmlSerializer.delete(dbms, "Metadata", id, context);
@@ -2053,9 +2053,9 @@ public class DataManager {
         //--- remove categories
         deleteAllMetadataCateg(dbms, id);
 
-        dbms.execute("DELETE FROM MetadataRating WHERE metadataId=?", new Integer(id));
-        dbms.execute("DELETE FROM Validation WHERE metadataId=?", new Integer(id));
-        dbms.execute("DELETE FROM MetadataStatus WHERE metadataId=?", new Integer(id));
+        dbms.execute("DELETE FROM MetadataRating WHERE metadataId=?", Integer.valueOf(id));
+        dbms.execute("DELETE FROM Validation WHERE metadataId=?", Integer.valueOf(id));
+        dbms.execute("DELETE FROM MetadataStatus WHERE metadataId=?", Integer.valueOf(id));
 
         //--- remove metadata
         xmlSerializer.delete(dbms, "Metadata", id, context);
@@ -2077,7 +2077,7 @@ public class DataManager {
         if (skipAllIntranet)
             query += " AND groupId>1";
 
-        dbms.execute(query, new Integer(id));
+        dbms.execute(query, Integer.valueOf(id));
     }
 
     /**
@@ -2090,7 +2090,7 @@ public class DataManager {
     public void deleteAllMetadataCateg(Dbms dbms, String id) throws Exception {
         String query = "DELETE FROM MetadataCateg WHERE metadataId=?";
 
-        dbms.execute(query, new Integer(id));
+        dbms.execute(query, Integer.valueOf(id));
     }
 
     //--------------------------------------------------------------------------
@@ -2325,7 +2325,7 @@ public class DataManager {
      * @throws Exception
      */
     public void setOperation(ServiceContext context, Dbms dbms, String mdId, String grpId, String opId) throws Exception {
-        setOperation(context,dbms,new Integer(mdId),new Integer(grpId),new Integer(opId));
+        setOperation(context,dbms,Integer.valueOf(mdId),Integer.valueOf(grpId),Integer.valueOf(opId));
     }
 
     /**
@@ -2409,7 +2409,7 @@ public class DataManager {
      * @throws Exception
      */
     public void unsetOperation(ServiceContext context, Dbms dbms, String mdId, String grpId, String opId) throws Exception {
-        unsetOperation(context,dbms,new Integer(mdId),new Integer(grpId),new Integer(opId));
+        unsetOperation(context,dbms,Integer.valueOf(mdId),Integer.valueOf(grpId),Integer.valueOf(opId));
     }
 
     /**
@@ -2566,7 +2566,7 @@ public class DataManager {
      * @throws Exception
      */
     public void setCategory(ServiceContext context, Dbms dbms, String mdId, String categId) throws Exception {
-        Object args[] = { new Integer(mdId), new Integer(categId) };
+        Object args[] = { Integer.valueOf(mdId), Integer.valueOf(categId) };
 
         if (!isCategorySet(dbms, mdId, categId)) {
             dbms.execute("INSERT INTO MetadataCateg(metadataId, categoryId) VALUES(?,?)", args);
@@ -2586,7 +2586,7 @@ public class DataManager {
      */
     public boolean isCategorySet(Dbms dbms, String mdId, String categId) throws Exception {
         String query = "SELECT metadataId FROM MetadataCateg " +"WHERE metadataId=? AND categoryId=?";
-        Element elRes = dbms.select(query, new Integer(mdId), new Integer(categId));
+        Element elRes = dbms.select(query, Integer.valueOf(mdId), Integer.valueOf(categId));
         return (elRes.getChildren().size() != 0);
     }
 
@@ -2599,7 +2599,7 @@ public class DataManager {
      */
     public void unsetCategory(ServiceContext context, Dbms dbms, String mdId, String categId) throws Exception {
         String query = "DELETE FROM MetadataCateg WHERE metadataId=? AND categoryId=?";
-        dbms.execute(query, new Integer(mdId), new Integer(categId));
+        dbms.execute(query, Integer.valueOf(mdId), Integer.valueOf(categId));
         if (svnManager != null) {
             svnManager.setHistory(dbms, mdId+"", context);
         }
@@ -2614,7 +2614,7 @@ public class DataManager {
      */
     public Element getCategories(Dbms dbms, String mdId) throws Exception {
         String query = "SELECT id, name FROM Categories, MetadataCateg WHERE id=categoryId AND metadataId=?";
-        return dbms.select(query, new Integer(mdId));
+        return dbms.select(query, Integer.valueOf(mdId));
     }
 
     /**
@@ -2638,7 +2638,7 @@ public class DataManager {
                 Log.debug(Geonet.DATA_MANAGER, "Autofixing is enabled, trying update-fixed-info (updateDatestamp: " + updateDatestamp.name() + ")");
 
             String query = "SELECT uuid, isTemplate FROM Metadata WHERE id = ?";
-            Element rec = dbms.select(query, new Integer(id)).getChild("record");
+            Element rec = dbms.select(query, Integer.valueOf(id)).getChild("record");
             Boolean isTemplate = rec != null && !rec.getChildText("istemplate").equals("n");
 
             // don't process templates
@@ -2702,7 +2702,7 @@ public class DataManager {
 
         String query = "select m.id, m.uuid, m.data, mn.notifierId, mn.action from metadata m left join metadatanotifications mn on m.id = mn.metadataId\n" +
                 "where (mn.notified is null or mn.notified = 'n') and (mn.action <> 'd') and (mn.notifierId is null or mn.notifierId = ?)";
-        List<Element> results = dbms.select(query, new Integer(notifierId)).getChildren();
+        List<Element> results = dbms.select(query, Integer.valueOf(notifierId)).getChildren();
         if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
             Log.debug(Geonet.DATA_MANAGER, "getUnnotifiedMetadata after select: " + (results != null));
 
@@ -2737,7 +2737,7 @@ public class DataManager {
 
         String query = "select metadataId as id, metadataUuid as uuid, notifierId, action from metadatanotifications " +
                 "where (notified = 'n') and (action = 'd') and (notifierId = ?)";
-        List<Element> results = dbms.select(query, new Integer(notifierId)).getChildren();
+        List<Element> results = dbms.select(query, Integer.valueOf(notifierId)).getChildren();
         if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
             Log.debug(Geonet.DATA_MANAGER, "getUnnotifiedMetadataToDelete after select: " + (results != null));
 
@@ -2767,12 +2767,12 @@ public class DataManager {
      */
     public void setMetadataNotified(String metadataId, String metadataUuid, String notifierId, boolean deleteNotification, Dbms dbms) throws Exception {
         String query = "DELETE FROM MetadataNotifications WHERE metadataId=? AND notifierId=?";
-        dbms.execute(query, new Integer(metadataId), new Integer(notifierId));
+        dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId));
         dbms.commit();
 
         if (!deleteNotification) {
             query = "INSERT INTO MetadataNotifications (metadataId, notifierId, metadataUuid, notified, action) VALUES (?,?,?,?,?)";
-            dbms.execute(query, new Integer(metadataId), new Integer(notifierId), metadataUuid, "y", "u");
+            dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId), metadataUuid, "y", "u");
             dbms.commit();
         }
 
@@ -2793,11 +2793,11 @@ public class DataManager {
             Log.debug(Geonet.DATA_MANAGER, "setMetadataNotifiedError");
         try {
             String query = "DELETE FROM MetadataNotifications WHERE metadataId=? AND notifierId=?";
-            dbms.execute(query, new Integer(metadataId), new Integer(notifierId));
+            dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId));
 
             String action = (deleteNotification == true)?"d":"u";
             query = "INSERT INTO MetadataNotifications (metadataId, notifierId, metadataUuid, notified, action, errormsg) VALUES (?,?,?,?,?,?)";
-            dbms.execute(query, new Integer(metadataId), new Integer(notifierId), metadataUuid, "n", action, error);
+            dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId), metadataUuid, "n", action, error);
             dbms.commit();
 
             if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
@@ -2931,7 +2931,7 @@ public class DataManager {
                 "uuid, isHarvested, harvestUuid, popularity, rating, owner, displayOrder FROM Metadata WHERE id = ?";
 
         // add Metadata table infos: schemaId, createDate, changeDate, source,
-        Element rec = dbms.select(query, new Integer(id)).getChild("record");
+        Element rec = dbms.select(query, Integer.valueOf(id)).getChild("record");
 
         String  schema     = rec.getChildText("schemaid");
         String  createDate = rec.getChildText("createdate");
@@ -2979,7 +2979,7 @@ public class DataManager {
 
         // add owner name
         query = "SELECT username FROM Users WHERE id = ?";
-        Element record = dbms.select(query, new Integer(owner)).getChild("record");
+        Element record = dbms.select(query, Integer.valueOf(owner)).getChild("record");
         if (record != null) {
             String ownerName = record.getChildText("username");
             addElement(info, Edit.Info.Elem.OWNERNAME, ownerName);
@@ -2987,7 +2987,7 @@ public class DataManager {
 
         // add categories
         List categories = dbms.select("SELECT id, name FROM MetadataCateg, Categories "+
-                "WHERE metadataId = ? AND categoryId = id ORDER BY id", new Integer(id)).getChildren();
+                "WHERE metadataId = ? AND categoryId = id ORDER BY id", Integer.valueOf(id)).getChildren();
 
         for (Object category1 : categories) {
             Element category = (Element) category1;
@@ -3374,7 +3374,7 @@ public class DataManager {
             try {
                 dbms  = (Dbms) srvContext.getResourceManager().openDirect(Geonet.Res.MAIN_DB);
                 String updateQuery = "UPDATE Metadata SET popularity = popularity +1 WHERE id = ?";
-                Integer iId = new Integer(id);
+                Integer iId = Integer.valueOf(id);
                 dbms.execute(updateQuery, iId);
                 indexMetadata(dbms, id);
             }
