@@ -71,7 +71,7 @@ public class LDAPUtils {
 			String query = "INSERT INTO Users (id, username, password, surname, name, profile, "+
 						"address, city, state, zip, country, email, organisation, kind, authtype) "+
 						"VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
-			dbms.execute(query, new Integer(id), user.getUsername(), "", user.getSurname(), user.getName(), 
+			dbms.execute(query, Integer.valueOf(id), user.getUsername(), "", user.getSurname(), user.getName(), 
 					user.getProfile(), user.getAddress(), user.getCity(), user.getState(), user.getZip(), 
 					user.getCountry(), user.getEmail(), user.getOrganisation(), user.getKind(), LDAPConstants.LDAP_FLAG);
 		} else {
@@ -90,17 +90,17 @@ public class LDAPUtils {
 						" city=?, state=?, zip=?, country=?, email=?, organisation=?, kind=? WHERE id=?";
 			dbms.execute (query, user.getUsername(), "", user.getSurname(), user.getName(), 
 					user.getProfile(), user.getAddress(), user.getCity(), user.getState(), user.getZip(), 
-					user.getCountry(), user.getEmail(), user.getOrganisation(), user.getKind(), new Integer(id));
+					user.getCountry(), user.getEmail(), user.getOrganisation(), user.getKind(), Integer.valueOf(id));
 			
 			// Delete user groups
 			if (importPrivilegesFromLdap) {
-				dbms.execute("DELETE FROM UserGroups WHERE userId=?", new Integer(id));
+				dbms.execute("DELETE FROM UserGroups WHERE userId=?", Integer.valueOf(id));
 			}
 		}
 
 		// Add user groups
 		if (importPrivilegesFromLdap && !Profile.ADMINISTRATOR.equals(user.getProfile())) {
-			dbms.execute("DELETE FROM UserGroups WHERE userId=?", new Integer(id));
+			dbms.execute("DELETE FROM UserGroups WHERE userId=?", Integer.valueOf(id));
 			for(Map.Entry<String, String> privilege : user.getPrivileges().entries()) {
 				// Add group privileges for each groups
 				
@@ -120,8 +120,8 @@ public class LDAPUtils {
 					// If LDAP group does not exist in local database, create it
 					groupId = serialFactory.getSerial(dbms, "Groups") + "";
 					String query = "INSERT INTO GROUPS(id, name) VALUES(?,?)";
-					dbms.execute(query, new Integer(groupId), groupName);
-					Lib.local.insert(dbms, "Groups", new Integer(groupId), groupName);
+					dbms.execute(query, Integer.valueOf(groupId), groupName);
+					Lib.local.insert(dbms, "Groups", Integer.valueOf(groupId), groupName);
 				} else if (groupRecord != null) {
 					groupId = groupRecord.getChildText("id");
 				}
@@ -131,11 +131,11 @@ public class LDAPUtils {
 						Log.debug(Geonet.LDAP, "  - Add LDAP group " + groupName + " for user.");
 					}
 					
-					Update.addGroup(dbms, new Integer(id), new Integer(groupId), profile);
+					Update.addGroup(dbms, Integer.valueOf(id), Integer.valueOf(groupId), profile);
 					
 					try {
 						if (profile.equals(Profile.REVIEWER)) {
-							Update.addGroup(dbms, new Integer(id), new Integer(
+							Update.addGroup(dbms, Integer.valueOf(id), Integer.valueOf(
 									groupId), Profile.EDITOR);
 						}
 					} catch (Exception e) {
