@@ -135,7 +135,7 @@ public class Get implements Service {
 	 */
 	private static Set<String> retrieveIds(Dbms dbms, String query,
 			String field, int id) throws SQLException {
-		List<Element> records = dbms.select(query, new Integer(id)).getChildren();
+		List<Element> records = dbms.select(query, Integer.valueOf(id)).getChildren();
 		Set<String> results = new HashSet<String>();
 
 		for (Object o : records) {
